kubernetes/apps/media/wizarr/app/httproute-internal.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: wizarr-internal
  namespace: media
  annotations:
    external-dns.alpha.kubernetes.io/hostname: wizarr.homelab0.org
spec:
  parentRefs:
    - name: envoy-internal
      namespace: network
      sectionName: https
  hostnames:
    - wizarr.homelab0.org
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: wizarr
          port: 5690
      filters:
        - type: ResponseHeaderModifier
          responseHeaderModifier:
            set:
              - name: Strict-Transport-Security
                value: "max-age=31536000; includeSubDomains"
              - name: X-Frame-Options
                value: "SAMEORIGIN"
              - name: X-Content-Type-Options
                value: "nosniff"
              - name: Referrer-Policy
                value: "strict-origin-when-cross-origin"
